update light-mode and add some documents

--- a/PROJECTS/DOCUMENTATION PAGE/contribution.html
+++ b/PROJECTS/DOCUMENTATION PAGE/contribution.html
@@ -85,12 +85,14 @@
                             <li class="list-courses-item">
                                 <a href="https://drive.google.com/drive/folders/1fP-kASOLyuN8foH18tYlonfsCNanDn1J?fbclid=IwAR2xzr1UEsWBonxnQ2Tulkw3q2N_6HMsgTCtmu8l49V08rNTAKDuTTeLOrc" class="list-courses-link" target="blank">3. Ôn thi học kì ITUS</a>
                             </li>
-
                             <li class="list-courses-item">
-                                <a href="https://vinahost.vn/thu-thuat-tim-kiem-tren-google" class="list-courses-link" target="blank">4. Google :))</a>
+                                <a href="https://www.facebook.com/groups/hoctap20shh1" class="list-courses-link" target="blank">4. Group Thông tin - Tài liệu học tập 20SHH1</a>
                             </li>
                             <li class="list-courses-item">
-                                <a href="https://bloganchoi.com/kenh-youtube-noi-dung-thu-vi-va-huu-ich-nhat-2020/" class="list-courses-link" target="blank">5. Youtube :))</a>
+                                <a href="https://vinahost.vn/thu-thuat-tim-kiem-tren-google" class="list-courses-link" target="blank">5. Google :))</a>
+                            </li>
+                            <li class="list-courses-item">
+                                <a href="https://bloganchoi.com/kenh-youtube-noi-dung-thu-vi-va-huu-ich-nhat-2020/" class="list-courses-link" target="blank">6. Youtube :))</a>
                             </li>
                     </div>
                     <div class="contribution-area">
