--- a/PROJECTS/DOCUMENTATION PAGE/documents.html
+++ b/PROJECTS/DOCUMENTATION PAGE/documents.html
@@ -157,6 +157,9 @@
                                     <a href="https://drive.google.com/drive/folders/1hcFXnCQViC6J_L0i9RCxyTyc1oDWidaT" class="list-courses-link" target="blank">10. Lập trình hướng đối tượng | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/folders/1E26F2REx4Aez3s-oliNtD5m6tEFeg7_X" class="list-courses-link" target="blank">10.1 Lập trình hướng đối tượng | Tổng hợp</a>
+                                </li>
+                                <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1GN3CzEb34NBDTWAL2xIgsEtN7rzdTL0-" class="list-courses-link" target="blank">11. Lý thuyết máy học | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
@@ -496,6 +499,9 @@
                                     <a href="https://drive.google.com/drive/folders/1nogS6u7Fem1QaRctkh4u9I0BF_2ZJIaZ" class="list-courses-link" target="blank">18. Sinh đại cương 2 | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/u/1/folders/1oEdKlsT-ylvfOxLqS0ju9vd4bFzdPpmN" class="list-courses-link" target="blank">18.1 Sinh đại cương 2 | Tổng hợp</a>
+                                </li>
+                                <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1lJVQRfWpijQuOD1mS997sCL5MHXiBQ-8" class="list-courses-link" target="blank">19. Sinh hoá | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
@@ -629,31 +635,34 @@
                                     <a href="https://drive.google.com/drive/folders/1ouzV_FEHzSCpHOjMr3HaFtF00Ggk5jvi" class="list-courses-link" target="blank">27. Toán cao cấp C | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1Hc8OcOQJ-plY4_5Q72mgvkrnS691Xj4t" class="list-courses-link" target="blank">28. Toán rời rạc | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/u/1/folders/1_WIB_kVQ9SoGBqjqVUVNvKY-ZmBUuhtO" class="list-courses-link" target="blank">28. Toán học tổ hợp | Tổng hợp</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://www.facebook.com/groups/toantin.org/" class="list-courses-link" target="blank">29. Toantin.org Group | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/folders/1Hc8OcOQJ-plY4_5Q72mgvkrnS691Xj4t" class="list-courses-link" target="blank">29. Toán rời rạc | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1Pb9p3f6U9zNlOVYL4I4CBQ0QhAXFsf17" class="list-courses-link" target="blank">30. Trí tuệ nhân tạo | Tailieuhcmus</a>
+                                    <a href="https://www.facebook.com/groups/toantin.org/" class="list-courses-link" target="blank">30. Toantin.org Group | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/16PspuVUQEDmCbBRi2Gk6y__96q2o5nrm" class="list-courses-link" target="blank">31. Vector Calculus | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/folders/1Pb9p3f6U9zNlOVYL4I4CBQ0QhAXFsf17" class="list-courses-link" target="blank">31. Trí tuệ nhân tạo | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/174nI0KzfXwx3TxFznAN0pTJ3QYp5et0U" class="list-courses-link" target="blank">32. Vi tích phân 1B | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/folders/16PspuVUQEDmCbBRi2Gk6y__96q2o5nrm" class="list-courses-link" target="blank">32. Vector Calculus | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1aI_6pxbl0LB65qsOsKUdvG2d1MIfzba-" class="list-courses-link" target="blank">33. Vi tích phân 1C | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/folders/174nI0KzfXwx3TxFznAN0pTJ3QYp5et0U" class="list-courses-link" target="blank">33. Vi tích phân 1B | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1gBVCLDnCD5fgXPaZMQgfHaoaFXVtg56R" class="list-courses-link" target="blank">34. Vi tích phân 2B | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/folders/1aI_6pxbl0LB65qsOsKUdvG2d1MIfzba-" class="list-courses-link" target="blank">34. Vi tích phân 1C | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://www.facebook.com/groups/163327654251069/?hc_location=group" class="list-courses-link" target="blank">35. Việc làm khoa Toán | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/folders/1gBVCLDnCD5fgXPaZMQgfHaoaFXVtg56R" class="list-courses-link" target="blank">35. Vi tích phân 2B | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1wWLqaaqo-96Rs3L8VdP1rBRJOAfR3qcU" class="list-courses-link" target="blank">36. Xác suất - thống kê | Tailieuhcmus</a>
+                                    <a href="https://www.facebook.com/groups/163327654251069/?hc_location=group" class="list-courses-link" target="blank">36. Việc làm khoa Toán | Tailieuhcmus</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/folders/1wWLqaaqo-96Rs3L8VdP1rBRJOAfR3qcU" class="list-courses-link" target="blank">37. Xác suất - thống kê | Tailieuhcmus</a>
                                 </li>
                             </ul>
                         </div>
