update search-bar + math tests + Le Kiet's ebooks

--- a/PROJECTS/DOCUMENTATION PAGE/documents.html
+++ b/PROJECTS/DOCUMENTATION PAGE/documents.html
@@ -136,6 +136,9 @@
                                     <a href="https://drive.google.com/drive/folders/1K2oTyKe0_zzt6gACYuivn542RqpxI099" class="list-courses-link" target="blank">3. Cấu Trúc Dữ Liệu Và Giải Thuật | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/u/1/folders/1pmdAi8tLOEkYv31J-IRxDo6kOAV4Z1E5" class="list-courses-link" target="blank">3.1 Cấu Trúc Dữ Liệu Và Giải Thuật | Tổng hợp</a>
+                                </li>
+                                <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1-DqXc_W3LJirGrgIuoVzC-1b4iyKc4Tl" class="list-courses-link" target="blank">4. Cơ sở dữ liệu | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
