--- a/PROJECTS/DOCUMENTATION PAGE/contribution.html
+++ b/PROJECTS/DOCUMENTATION PAGE/contribution.html
@@ -97,10 +97,12 @@
                     </div>
                     <div class="contribution-area">
                         <p class="contribution-text">Bạn có thể chia sẻ tài liệu và đề thi ở <a class="gg-drive-link contribution-link" href="https://driveuploader.com/upload/JS58fXozqO/" target="blank">đây</a> hoặc tham gia nhóm <a class="fb-link contribution-link" href="https://www.facebook.com/groups/tailieuhcmus"
-                                target="blank">Tài liệu HCMUS</a> nhé! Chúc bạn có những năm tháng đại học thật vui vẻ và hữu ích!</p>
+                                target="blank">Tài liệu HCMUS</a> nhé! Nếu có bất kì ý kiến nào muốn đóng góp cho Page (về trải nghiệm, giao diện, báo link hỏng,...), bạn có thể gửi feedback tại <a class="gg-form-link contribution-link" href="https://docs.google.com/forms/d/1OEdgqOeD9k2jUgZ1T9fGF8753jTGIRIRApOtBIThmGE/viewform?edit_requested=true"
+                                target="blank">đây</a>. Chúc bạn có những năm tháng đại học thật vui vẻ và hữu ích!</p>
                         <div class="btn-group">
                             <a class="contribution-btn" href="https://driveuploader.com/upload/JS58fXozqO/" target="blank">Google Drive</a>
                             <a class="contribution-btn" href="https://www.facebook.com/groups/tailieuhcmus" target="blank">Tài liệu HCMUS</a>
+                            <a class="contribution-btn" href="https://docs.google.com/forms/d/1OEdgqOeD9k2jUgZ1T9fGF8753jTGIRIRApOtBIThmGE/viewform?edit_requested=true" target="blank">Feedback</a>
                         </div>
                     </div>
                 </div>
