--- a/PROJECTS/DOCUMENTATION PAGE/tests.html
+++ b/PROJECTS/DOCUMENTATION PAGE/tests.html
@@ -284,16 +284,16 @@
                                     <a href="https://drive.google.com/drive/folders/18m0-hZC2iC71UugMFalYU0u2HjlHEFK1" target="blank" class="list-courses-link">42. vi mô định lượng</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1JPaK2vDeqv000abURhB2JIltZApp4tqC" target="blank" class="list-courses-link">43. vi tích phân 1b</a>
+                                    <a href="https://drive.google.com/drive/folders/1JPaK2vDeqv000abURhB2JIltZApp4tqC" target="blank" class="list-courses-link">43. vi tích phân 1B</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/165jlaxBTZ7oE4o7y05g5mTBxTIV3wvgO" target="blank" class="list-courses-link">44. vi tích phân 1c</a>
+                                    <a href="https://drive.google.com/drive/folders/165jlaxBTZ7oE4o7y05g5mTBxTIV3wvgO" target="blank" class="list-courses-link">44. vi tích phân 1C</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1z5savv_pve2MKcwVlCmD7-raVrGOP1iw" target="blank" class="list-courses-link">45. vi tích phân 2a</a>
+                                    <a href="https://drive.google.com/drive/folders/1z5savv_pve2MKcwVlCmD7-raVrGOP1iw" target="blank" class="list-courses-link">45. vi tích phân 2A</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1d4JmPSbylUWXWBqlLCQT-HJF-tfUPYHr" target="blank" class="list-courses-link">46. vi tích phân 2b</a>
+                                    <a href="https://drive.google.com/drive/folders/1d4JmPSbylUWXWBqlLCQT-HJF-tfUPYHr" target="blank" class="list-courses-link">46. vi tích phân 2B</a>
                                 </li>
                                 <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1zvlu-Y6MEmsgAI8oPLT58piw6YBQwlNs" target="blank" class="list-courses-link">47. xác suất nâng cao</a>
