update smile faces :))

--- a/PROJECTS/DOCUMENTATION PAGE/contribution.html
+++ b/PROJECTS/DOCUMENTATION PAGE/contribution.html
@@ -89,10 +89,10 @@
                                 <a href="https://www.facebook.com/groups/hoctap20shh1" class="list-courses-link" target="blank">4. Group Thông tin - Tài liệu học tập 20SHH1</a>
                             </li>
                             <li class="list-courses-item">
-                                <a href="https://vinahost.vn/thu-thuat-tim-kiem-tren-google" class="list-courses-link" target="blank">5. Google :))</a>
+                                <a href="https://vinahost.vn/thu-thuat-tim-kiem-tren-google" class="list-courses-link" target="blank">5. Google ( ͡° ͜ʖ ͡°)</a>
                             </li>
                             <li class="list-courses-item">
-                                <a href="https://bloganchoi.com/kenh-youtube-noi-dung-thu-vi-va-huu-ich-nhat-2020/" class="list-courses-link" target="blank">6. Youtube :))</a>
+                                <a href="https://bloganchoi.com/kenh-youtube-noi-dung-thu-vi-va-huu-ich-nhat-2020/" class="list-courses-link" target="blank">6. Youtube ( ͡° ͜ʖ ͡°)</a>
                             </li>
                     </div>
                     <div class="contribution-area">
