--- a/PROJECTS/DOCUMENTATION PAGE/documents.html
+++ b/PROJECTS/DOCUMENTATION PAGE/documents.html
@@ -101,25 +101,37 @@
                                     <a href="https://drive.google.com/file/d/1eYAdr6Ev6kPVngbgV1PSqMWbshUfOuOa/view" class="list-courses-link" target="blank">3. Các sách giáo trình | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/file/d/1w_QpJl7QhwOTLKAPq1L31PyiOlhtaqcY/view" class="list-courses-link" target="blank">4. Giáo dục quốc phòng | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/u/1/folders/1HldAwfLJDjSnfDbrQ1Z7W_KtwD5XBb8T" class="list-courses-link" target="blank">4. Chủ nghĩa xã hội khoa học | Tổng hợp</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/138CipO0yHyX8Y6tnJ-6L_LwNgW5yOoyG?usp=sharing" class="list-courses-link" target="blank">5. Kinh tế đại cương | Tổng hợp</a>
+                                    <a href="https://drive.google.com/file/d/1w_QpJl7QhwOTLKAPq1L31PyiOlhtaqcY/view" class="list-courses-link" target="blank">5. Giáo dục quốc phòng | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/10hmujboP4RGd8sfmsABX3UEfEbXfKi0V" class="list-courses-link" target="blank">6. Những nguyên lý cơ bản của chủ nghĩa Mác - Lênin | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/u/1/folders/1G6lmbKgLZSuUD9_2y2UK-wtjyIIEHLhI" class="list-courses-link" target="blank">6. Kinh tế chính trị mác - lênin | Tổng hợp</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://phapluatdaicuong-hcmus.webnode.vn/" class="list-courses-link" target="blank">7. Pháp luật đại cương | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/folders/138CipO0yHyX8Y6tnJ-6L_LwNgW5yOoyG?usp=sharing" class="list-courses-link" target="blank">7. Kinh tế đại cương | Tổng hợp</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1SyKOYytHb-APAvsEPfG_TD1gS9uxdad4" class="list-courses-link" target="blank">8. Tâm lý học đại cương | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/folders/10hmujboP4RGd8sfmsABX3UEfEbXfKi0V" class="list-courses-link" target="blank">8. Những nguyên lý cơ bản của chủ nghĩa Mác - Lênin | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1ihNSvlfx1i4cpsjiTaJ9t3KvJ5BX2HlS" class="list-courses-link" target="blank">9. Triết học Mác - Lênin | Tailieuhcmus</a>
+                                    <a href="https://phapluatdaicuong-hcmus.webnode.vn/" class="list-courses-link" target="blank">9. Pháp luật đại cương | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1JX8H6wYv5eBfjAi62gSoE2wCxNsDGO6I" class="list-courses-link" target="blank">10. Tư tưởng Hồ Chí Minh | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/folders/1SyKOYytHb-APAvsEPfG_TD1gS9uxdad4" class="list-courses-link" target="blank">10. Tâm lý học đại cương | Tailieuhcmus</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/folders/1ihNSvlfx1i4cpsjiTaJ9t3KvJ5BX2HlS" class="list-courses-link" target="blank">11. Triết học Mác - Lênin | Tailieuhcmus</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/u/1/folders/1gANMhcC7qs6LfvLgA_ItAtWYFOKIZtPl" class="list-courses-link" target="blank">11.1 Triết học Mác - Lênin | Tổng hợp</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/folders/1JX8H6wYv5eBfjAi62gSoE2wCxNsDGO6I" class="list-courses-link" target="blank">12. Tư tưởng Hồ Chí Minh | Tailieuhcmus</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/u/1/folders/1TxW-LD5nPmuPr4QFs7Fx76bKWTBHjG6t" class="list-courses-link" target="blank">12.1 Tư tưởng Hồ Chí Minh | Tổng hợp</a>
                                 </li>
                             </ul>
                         </div>
@@ -154,13 +166,16 @@
                                     <a href="https://drive.google.com/drive/folders/1EfPtewpsMzYRTf2APh_Y4pF7LKOpVYzl" class="list-courses-link" target="blank">8. Kĩ thuật lập trình | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/u/1/folders/1AL2BStLe4JFOZEwCcE2rJj6ApdTC7vHu" class="list-courses-link" target="blank">8.1 Kĩ thuật lập trình | Tổng hợp</a>
+                                </li>
+                                <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1-68YYPrDTAFF9FMnAngySM6T_nkthFmM" class="list-courses-link" target="blank">9. Lập trình C# 2.0 | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1hcFXnCQViC6J_L0i9RCxyTyc1oDWidaT" class="list-courses-link" target="blank">10. Lập trình hướng đối tượng | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1E26F2REx4Aez3s-oliNtD5m6tEFeg7_X" class="list-courses-link" target="blank">10.1 Lập trình hướng đối tượng | Tổng hợp</a>
+                                    <a href="https://drive.google.com/drive/u/1/folders/16Z5lN0AVhDFoO_NL0MW1fv91PAZWtoJr" class="list-courses-link" target="blank">10.1 Lập trình hướng đối tượng | Tổng hợp</a>
                                 </li>
                                 <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1GN3CzEb34NBDTWAL2xIgsEtN7rzdTL0-" class="list-courses-link" target="blank">11. Lý thuyết máy học | Tailieuhcmus</a>
@@ -169,13 +184,19 @@
                                     <a href="https://drive.google.com/drive/folders/1UiY8_NJzTA1z_Kixy2mWe1vXQ685-tK4" class="list-courses-link" target="blank">12. Mạng máy tính | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/u/1/folders/1Mga7OToFQViPuezAlHTDfwN4zuqoIVr7" class="list-courses-link" target="blank">12.1 Mạng máy tính | Tổng hợp</a>
+                                </li>
+                                <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1Xc-y4KxYVQ6KSbZc2yuO9_uO5rB8B15h" class="list-courses-link" target="blank">13. Nhập môn công nghệ thông tin | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/0Bxtai1f5Fda1UThDbU5GYlJvSTQ" class="list-courses-link" target="blank">14. Thiết kế giao diện bằng Bootstrap | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/u/1/folders/1_e7fqdL_zHyKxhjiVAwCnKZV0kjreq4n" class="list-courses-link" target="blank">14. Nhập môn lập trình | Tổng hợp</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/folders/1Pb9p3f6U9zNlOVYL4I4CBQ0QhAXFsf17" class="list-courses-link" target="blank">15. Trí tuệ nhân tạo | Tailieuhcmus</a>
+                                    <a href="https://drive.google.com/drive/folders/0Bxtai1f5Fda1UThDbU5GYlJvSTQ" class="list-courses-link" target="blank">15. Thiết kế giao diện bằng Bootstrap | Tailieuhcmus</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/folders/1Pb9p3f6U9zNlOVYL4I4CBQ0QhAXFsf17" class="list-courses-link" target="blank">16. Trí tuệ nhân tạo | Tailieuhcmus</a>
                                 </li>
                             </ul>
                         </div>
@@ -502,7 +523,7 @@
                                     <a href="https://drive.google.com/drive/folders/1nogS6u7Fem1QaRctkh4u9I0BF_2ZJIaZ" class="list-courses-link" target="blank">18. Sinh đại cương 2 | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/u/1/folders/1oEdKlsT-ylvfOxLqS0ju9vd4bFzdPpmN" class="list-courses-link" target="blank">18.1 Sinh đại cương 2 | Tổng hợp</a>
+                                    <a href="https://drive.google.com/drive/u/1/folders/1ihO4gIWgL6FE2Rjn1eeqcTemJT2tgQmn" class="list-courses-link" target="blank">18.1 Sinh đại cương 2 | Tổng hợp</a>
                                 </li>
                                 <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1lJVQRfWpijQuOD1mS997sCL5MHXiBQ-8" class="list-courses-link" target="blank">19. Sinh hoá | Tailieuhcmus</a>
@@ -578,6 +599,9 @@
                                     <a href="https://drive.google.com/drive/folders/11acPQaAioZvcNJetGLM5xyE1iIcGGBSI" class="list-courses-link" target="blank">7. Đại số tuyến tính | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/u/1/folders/1szkxD7SW-jShK9ybxPwOvtghzP6nVOor" class="list-courses-link" target="blank">7.1 Đại số tuyến tính | Tổng hợp</a>
+                                </li>
+                                <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1imH77BbeCa9DCXSENbozcCvYSuOdcdhT" class="list-courses-link" target="blank">8. Đại số tuyến tính A1 | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
@@ -638,10 +662,13 @@
                                     <a href="https://drive.google.com/drive/folders/1ouzV_FEHzSCpHOjMr3HaFtF00Ggk5jvi" class="list-courses-link" target="blank">27. Toán cao cấp C | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
-                                    <a href="https://drive.google.com/drive/u/1/folders/1_WIB_kVQ9SoGBqjqVUVNvKY-ZmBUuhtO" class="list-courses-link" target="blank">28. Toán học tổ hợp | Tổng hợp</a>
+                                    <a href="https://drive.google.com/drive/u/1/folders/1oMXFbA9pnGNp4ldBHG8Gp9hmiixExQTS" class="list-courses-link" target="blank">28. Toán học tổ hợp | Tổng hợp</a>
                                 </li>
                                 <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1Hc8OcOQJ-plY4_5Q72mgvkrnS691Xj4t" class="list-courses-link" target="blank">29. Toán rời rạc | Tailieuhcmus</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/u/1/folders/12NmRK-IlFp7NDp8xkBQaOgLAM2xLIM_5" class="list-courses-link" target="blank">29.1 Toán rời rạc | Tổng hợp</a>
                                 </li>
                                 <li class="list-courses-item">
                                     <a href="https://www.facebook.com/groups/toantin.org/" class="list-courses-link" target="blank">30. Toantin.org Group | Tailieuhcmus</a>
@@ -656,16 +683,25 @@
                                     <a href="https://drive.google.com/drive/folders/174nI0KzfXwx3TxFznAN0pTJ3QYp5et0U" class="list-courses-link" target="blank">33. Vi tích phân 1B | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/u/1/folders/1Pgh0SJd1z562VTJNdFbrlCiE8CH_8xyd" class="list-courses-link" target="blank">33.1 Vi tích phân 1B | Tổng hợp</a>
+                                </li>
+                                <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1aI_6pxbl0LB65qsOsKUdvG2d1MIfzba-" class="list-courses-link" target="blank">34. Vi tích phân 1C | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1gBVCLDnCD5fgXPaZMQgfHaoaFXVtg56R" class="list-courses-link" target="blank">35. Vi tích phân 2B | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/u/1/folders/1E2QHHyASwWweeB-vG2Ii0bBpKRxbjR6V" class="list-courses-link" target="blank">35.1 Vi tích phân 2B | Tổng hợp</a>
+                                </li>
+                                <li class="list-courses-item">
                                     <a href="https://www.facebook.com/groups/163327654251069/?hc_location=group" class="list-courses-link" target="blank">36. Việc làm khoa Toán | Tailieuhcmus</a>
                                 </li>
                                 <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1wWLqaaqo-96Rs3L8VdP1rBRJOAfR3qcU" class="list-courses-link" target="blank">37. Xác suất - thống kê | Tailieuhcmus</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/u/1/folders/1g-VDFriiEWxyzDwjcMmcxXpmtqh940bN" class="list-courses-link" target="blank">37.1 Xác suất - thống kê | Tổng hợp</a>
                                 </li>
                             </ul>
                         </div>
@@ -689,6 +725,9 @@
                                 </li>
                                 <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/18sYegDdIhx0aS3S745WjguGRZ0OKRLoj" class="list-courses-link" target="blank">6. Vật lý đại cương 1 (Cơ - Nhiệt) | Tailieuhcmus</a>
+                                </li>
+                                <li class="list-courses-item">
+                                    <a href="https://drive.google.com/drive/u/1/folders/1lpI9TyJkztdWN03WFZGNZPu2XkWyNLrA" class="list-courses-link" target="blank">6.1 Vật lý đại cương 1 (Cơ - Nhiệt) | Tổng hợp</a>
                                 </li>
                                 <li class="list-courses-item">
                                     <a href="https://drive.google.com/drive/folders/1dpyABnBj4MsTdxQ8XwE-91la27rfqWon" class="list-courses-link" target="blank">7. Vật lý đại cương 2 (Điện - Quang) | Tailieuhcmus</a>
