update loading gif

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <div id="loading"><img id="loading-image" src="https://i.pinimg.com/originals/8b/32/15/8b3215c7ee7dbd5e33b36383a83a04b7.gif" alt="Loading..." /></div>
+    <div id="loading"><img id="loading-image" src="./images/loading.gif" alt="Loading..." /></div>
     <div id="progressbar"></div>
     <div id="scrollPath"></div>
     <header>
