--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Dinh Tran</title>
         <script src="https://use.fontawesome.com/786af939dc.js"></script>
-		<link rel="shortcut icon" href="./images/DT.png">
+		<link rel="shortcut icon" href="./images/DT.webp">
         <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
@@ -23,7 +23,7 @@
                     <a href="./index.html"
                         ><div class="nav-brand">
                             <img
-                                src="./images/DT.png"
+                                src="./images/DT.webp"
                                 alt="Dinh Tran"
                                 class="nav-brand-img"
                             /></div
