fixed responsive font-size

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                             <div class="project-info">
                                 <h3 class="project-name">Documentation Page</h3>
                                 <p class="project-description">
-                                    A page where you can find documents for all
-                                    subjects you want to learn.
+                                    A page where I can find documents for all
+                                    subjects I want to learn at university.
                                 </p>
                                 <div class="project-info-tag">
                                     <span class="info-tag">HTML</span>
@@ -118,7 +118,7 @@
                             <div class="project-info">
                                 <h3 class="project-name">Loop Studio Page</h3>
                                 <p class="project-description">
-                                    A simple VR landing page
+                                    A simple VR landing page.
                                 </p>
                                 <div class="project-info-tag">
                                     <span class="info-tag">HTML</span>
@@ -149,7 +149,7 @@
                             <div class="project-info">
                                 <h3 class="project-name">Room Homepage</h3>
                                 <p class="project-description">
-                                    A simple landing page with carousel effect
+                                    A simple landing page with carousel effect.
                                 </p>
                                 <div class="project-info-tag">
                                     <span class="info-tag">HTML</span>
@@ -187,7 +187,7 @@
                             <div class="project-info">
                                 <h3 class="project-name">calculator</h3>
                                 <p class="project-description">
-                                    A simple neumorphism calculator
+                                    A simple neumorphism calculator.
                                 </p>
                                 <div class="project-info-tag">
                                     <span class="info-tag">HTML</span>
@@ -282,7 +282,7 @@
                             <div class="project-info">
                                 <h3 class="project-name">Meme Generator</h3>
                                 <p class="project-description">
-                                    Are you a true fan of memes? Try this!
+                                    Are you a true fan of memes? 
                                 </p>
                                 <div class="project-info-tag">
                                     <span class="info-tag">HTML</span>
@@ -313,7 +313,7 @@
                             <div class="project-info">
                                 <h3 class="project-name">Paint</h3>
                                 <p class="project-description">
-                                    A simple paint app on web
+                                    A simple paint app on web.
                                 </p>
                                 <div class="project-info-tag">
                                     <span class="info-tag">HTML</span>
