add dark-mode-effect / fixed some typing error

--- a/PROJECTS/LOOPSTUDIOS-PAGE/index.html
+++ b/PROJECTS/LOOPSTUDIOS-PAGE/index.html
@@ -1,142 +1,248 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- displays site properly based on user's device -->
+        <title>Loopstudios landing page</title>
+        <link
+            rel="shortcut icon"
+            href="https://cdn0.iconfinder.com/data/icons/augmented-reality-virtual-reality-technology/64/vr-01-512.png"
+        />
+        <link rel="stylesheet" href="stylesheets/main.css" />
+        <link
+            href="https://unpkg.com/aos@2.3.1/dist/aos.css"
+            rel="stylesheet"
+        />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device -->
-
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
-    <title>Frontend Mentor | Loopstudios landing page</title>
-    <link rel="stylesheet" href="stylesheets/main.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-</head>
-
-<body>
-
-    <header>
-        <!-- add nav bar -->
-        <div class="logo">
-            <img class="logo-img" src="images/logo.svg" alt="Logo">
-        </div>
-        <div class="menu-icon"><img src="./images/icon-hamburger.svg" alt="menu-icon"></div>
-        <nav class="nav-bar">
+    <body>
+        <header>
+            <!-- add nav bar -->
             <div class="logo">
-                <img class="logo-img" src="images/logo.svg" alt="Logo">
+                <img class="logo-img" src="images/logo.svg" alt="Logo" />
             </div>
-            <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Events</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
-            </ul>
-            <div class="close-icon"><img src="./images/icon-close.svg" alt="close-icon"></div>
-        </nav>
-    </header>
-    <main>
-        <section class="section" id="top">
-            <div class="container">
-                <div class="hero">
-                    <span class="span-border"></span>
-                    <span class="span-border"></span>
-                    <span class="span-border"></span>
-                    <span class="span-border"></span>
-                    <h1 class="hero-title">Immersive experiences that deliver</h1>
-                </div>
-            </div>
-        </section>
-        <section class="section">
-            <div class="container">
-                <div class="interactive" data-aos="fade-right" data-aos-duration="500">
-                    <img class="interactive-img" src="images/desktop/image-interactive.jpg">
-                </div>
-                <div class="interactive-intro" data-aos="fade-left" data-aos-duration="500">
-                    <h2 class="interactive-intro-title">The leader in interactive VR</h2>
-                    <p class="interactive-intro-para">Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to
-                        their brand.
-                    </p>
-                </div>
-            </div>
-        </section>
-        <section class="section">
-            <div class="container">
-                <h2 class="creation-title" data-aos="zoom-in-down" data-aos-duration="1000"> Our creations</h2>
-                <div class="creation-cards" data-aos="zoom-in-up" data-aos-duration="1000">
-                    <div class="card">
-                        <h3>Deep earth</h3>
-                        <img src="images/desktop/image-deep-earth.jpg" alt="Deep Earth ">
-                    </div>
-                    <div class="card ">
-                        <h3>Night arcade</h3>
-                        <img src="images/desktop/image-night-arcade.jpg " alt="Night Arcade ">
-                    </div>
-                    <div class="card ">
-                        <h3>Soccer team VR</h3>
-                        <img src="images/desktop/image-soccer-team.jpg " alt="Soccer team VR ">
-                    </div>
-                    <div class="card ">
-                        <h3>The grid</h3>
-                        <img src="images/desktop/image-grid.jpg " alt="The grid ">
-                    </div>
-                    <div class="card ">
-                        <h3>From up above VR</h3>
-                        <img src="images/desktop/image-from-above.jpg " alt="From up above VR ">
-                    </div>
-                    <div class="card ">
-                        <h3>Pocket borealis</h3>
-                        <img src="images/desktop/image-pocket-borealis.jpg " alt="Pocket borealis ">
-                    </div>
-                    <div class="card ">
-                        <h3>The curiosity</h3>
-                        <img src="images/desktop/image-curiosity.jpg " alt="The curiosity ">
-                    </div>
-                    <div class="card ">
-                        <h3>Make it fisheye</h3>
-                        <img src="images/desktop/image-fisheye.jpg " alt="Make it fisheye ">
-                    </div>
-                </div>
-                <button class="creation-btn" data-aos="zoom-in-down" data-aos-duration="1000">See all</button>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div class="container">
-            <div class="footer-logo">
-                <img class="footer-logo-img" src="images/logo.svg " alt="Logo ">
+            <div class="menu-icon">
+                <img src="./images/icon-hamburger.svg" alt="menu-icon" />
             </div>
             <nav class="nav-bar">
+                <div class="logo">
+                    <img class="logo-img" src="images/logo.svg" alt="Logo" />
+                </div>
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="# ">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="# ">Careers</a></li>
-                    <li class="nav-item"><a class="nav-link" href="# ">Events</a></li>
-                    <li class="nav-item"><a class="nav-link" href="# ">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="# ">Support</a></li>
-                </ul>
-            </nav>
-            <nav class="nav-icon">
-                <ul class="nav-icon-list">
-                    <li class="nav-icon-item">
-                        <a href="# "><img src="images/icon-facebook.svg " alt="Facebook "></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
                     </li>
-                    <li class="nav-icon-item">
-                        <a href="# "><img src="images/icon-twitter.svg " alt="Twitter "></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Careers</a>
                     </li>
-                    <li class="nav-icon-item">
-                        <a href="# "><img src="images/icon-pinterest.svg" alt="Pinterest "></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Events</a>
                     </li>
-                    <li class="nav-icon-item">
-                        <a href="# "><img src="images/icon-instagram.svg " alt="Instagram "></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Support</a>
                     </li>
                 </ul>
+                <div class="close-icon">
+                    <img src="./images/icon-close.svg" alt="close-icon" />
+                </div>
             </nav>
-            <h5>© 2021 Loopstudios. All rights reserved.</h5>
-        </div>
-    </footer>
-    <a href="#top" id="back-to-top"><img src="./images/back-to-top.png" alt="Back to top"></a>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="./js/script.js"></script>
-</body>
-
+        </header>
+        <main>
+            <section class="section" id="top">
+                <div class="container">
+                    <div class="hero">
+                        <span class="span-border"></span>
+                        <span class="span-border"></span>
+                        <span class="span-border"></span>
+                        <span class="span-border"></span>
+                        <h1 class="hero-title">
+                            Immersive experiences that deliver
+                        </h1>
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <div
+                        class="interactive"
+                        data-aos="fade-right"
+                        data-aos-duration="500"
+                    >
+                        <img
+                            class="interactive-img"
+                            src="images/desktop/image-interactive.jpg"
+                        />
+                    </div>
+                    <div
+                        class="interactive-intro"
+                        data-aos="fade-left"
+                        data-aos-duration="500"
+                    >
+                        <h2 class="interactive-intro-title">
+                            The leader in interactive VR
+                        </h2>
+                        <p class="interactive-intro-para">
+                            Founded in 2011, Loopstudios has been producing
+                            world-class virtual reality projects for some of the
+                            best companies around the globe. Our award-winning
+                            creations have transformed businesses through
+                            digital experiences that bind to their brand.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <h2
+                        class="creation-title"
+                        data-aos="zoom-in-down"
+                        data-aos-duration="1000"
+                    >
+                        Our creations
+                    </h2>
+                    <div
+                        class="creation-cards"
+                        data-aos="zoom-in-up"
+                        data-aos-duration="1000"
+                    >
+                        <div class="card">
+                            <h3>Deep earth</h3>
+                            <img
+                                src="images/desktop/image-deep-earth.jpg"
+                                alt="Deep Earth "
+                            />
+                        </div>
+                        <div class="card">
+                            <h3>Night arcade</h3>
+                            <img
+                                src="images/desktop/image-night-arcade.jpg "
+                                alt="Night Arcade "
+                            />
+                        </div>
+                        <div class="card">
+                            <h3>Soccer team VR</h3>
+                            <img
+                                src="images/desktop/image-soccer-team.jpg "
+                                alt="Soccer team VR "
+                            />
+                        </div>
+                        <div class="card">
+                            <h3>The grid</h3>
+                            <img
+                                src="images/desktop/image-grid.jpg "
+                                alt="The grid "
+                            />
+                        </div>
+                        <div class="card">
+                            <h3>From up above VR</h3>
+                            <img
+                                src="images/desktop/image-from-above.jpg "
+                                alt="From up above VR "
+                            />
+                        </div>
+                        <div class="card">
+                            <h3>Pocket borealis</h3>
+                            <img
+                                src="images/desktop/image-pocket-borealis.jpg "
+                                alt="Pocket borealis "
+                            />
+                        </div>
+                        <div class="card">
+                            <h3>The curiosity</h3>
+                            <img
+                                src="images/desktop/image-curiosity.jpg "
+                                alt="The curiosity "
+                            />
+                        </div>
+                        <div class="card">
+                            <h3>Make it fisheye</h3>
+                            <img
+                                src="images/desktop/image-fisheye.jpg "
+                                alt="Make it fisheye "
+                            />
+                        </div>
+                    </div>
+                    <button
+                        class="creation-btn"
+                        data-aos="zoom-in-down"
+                        data-aos-duration="1000"
+                    >
+                        See all
+                    </button>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="container">
+                <div class="footer-logo">
+                    <img
+                        class="footer-logo-img"
+                        src="images/logo.svg "
+                        alt="Logo "
+                    />
+                </div>
+                <nav class="nav-bar">
+                    <ul class="nav-list">
+                        <li class="nav-item">
+                            <a class="nav-link" href="# ">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="# ">Careers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="# ">Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="# ">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="# ">Support</a>
+                        </li>
+                    </ul>
+                </nav>
+                <nav class="nav-icon">
+                    <ul class="nav-icon-list">
+                        <li class="nav-icon-item">
+                            <a href="# "
+                                ><img
+                                    src="images/icon-facebook.svg "
+                                    alt="Facebook "
+                            /></a>
+                        </li>
+                        <li class="nav-icon-item">
+                            <a href="# "
+                                ><img
+                                    src="images/icon-twitter.svg "
+                                    alt="Twitter "
+                            /></a>
+                        </li>
+                        <li class="nav-icon-item">
+                            <a href="# "
+                                ><img
+                                    src="images/icon-pinterest.svg"
+                                    alt="Pinterest "
+                            /></a>
+                        </li>
+                        <li class="nav-icon-item">
+                            <a href="# "
+                                ><img
+                                    src="images/icon-instagram.svg "
+                                    alt="Instagram "
+                            /></a>
+                        </li>
+                    </ul>
+                </nav>
+                <h5>© 2021 Loopstudios. All rights reserved.</h5>
+            </div>
+        </footer>
+        <a href="#top" id="back-to-top"
+            ><img src="./images/back-to-top.png" alt="Back to top"
+        /></a>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="./js/script.js"></script>
+    </body>
 </html>
