--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<div id="loading"><img id="loading-image" src="./images/loading.gif" alt="Loading Screen" /></div>
 		<header>
 			<div class="container">
-				<nav class="nav-bar"><a href="./index.html">
-						<div class="nav-brand"><img src="./images/DT.webp" alt="Dinh Tran" class="nav-brand-img" />
-						</div>
-					</a>
+				<nav class="nav-bar">
+					<div class="nav-brand"><a href="./index.html"><img src="./images/DT.webp" alt="Dinh Tran" class="nav-brand-img" /></a>
+						<button class="dark-mode-switch"><span class="fa fa-sun-o dark-mode-icon" aria-hidden="true"></span></button>
+					</div>			
 					<ul class="nav-list">
 						<li class="nav-item active"><a href="#portfolio" class="nav-link">portfolio</a></li>
 						<li class="nav-item"><a href="#about-me" class="nav-link">about me</a></li>
@@ -154,8 +154,7 @@
 							<div class="project-info">
 								<h3 class="project-name">Meme Generator</h3>
 								<p class="project-description">Are you a true fan of memes? </p>
-								<div class="project-info-tag"><span class="info-tag">HTML</span><span
-										class="info-tag">CSS</span><span class="info-tag">JS</span></div><a
+								<div class="project-info-tag"><span class="info-tag">REACT</span></div><a
 									href="https://tranphuongdinh.github.io/MemeGeneratorAppDemo/" target="_blank"
 									class="project-info-btn">View Demo <span class="bottom-border"></span></a>
 							</div>
@@ -195,7 +194,7 @@
 										title="YouTube video player" frameborder="0"
 										allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 										allowfullscreen></iframe></div>
-								<h3 class="work-name">C++Game Projects: Snake the game </h3>
+								<h3 class="work-name">C++ Game Project: Snake the game </h3>
 							</div>
 						</div>
 						<div class="work-card-collumn">
@@ -222,7 +221,7 @@
 					<h2 class="section-title">about me</h2>
 					<h1 class="about-me-title">front end developer from ho chi minh,
 						vietnam. </h1>
-					<p class="about-me-decription">Hi ! My name is Tran Phuong Dinh,
+					<p class="about-me-description">Hi ! My name is Tran Phuong Dinh,
 						and I am a second year student at Ho Chi Minh University Of Science. I have a strong passion
 						about Front-end web development,
 						and I've
